force-app/main/default/objects/Position__c/fields/HR_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>HR_Contact_Number__c</fullName>
    <label>HR Contact Number</label>
    <type>Phone</type>
</CustomField>