force-app/main/default/objects/Position__c/fields/HR_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>HR_Email_ID__c</fullName>
    <label>HR Email ID</label>
    <required>true</required>
    <type>Email</type>
</CustomField>