force-app/main/default/objects/Position__c/fields/Maximum_Budget__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Budget__c</fullName>
    <label>Maximum Budget</label>
    <precision>9</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>