force-app/main/default/objects/Position__c/fields/Milestone_Date__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Date__c</fullName>
    <label>Milestone Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>