force-app/main/default/objects/Position__c/fields/Minimum_Pay__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Pay__c</fullName>
    <label>Minimum Pay</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>