force-app/main/default/objects/Position__c/fields/NumberOfVaccinces__c.field-meta.xml
<CustomField>
    <fullName>NumberOfVaccinces__c</fullName>
    <label>NumberOfVacancies</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>